# canonical

./: DESCRIPTION.in  README  configure.ac
inst/: backscale_design.m.in  ca_analyseRidgeFocal.m.in  ca_analyseRidgeFocalIntermediate.m.in  ca_coeffM.m.in  ca_coord1.m.in  ca_eigNorm.m.in  ca_eigNormM.m.in  ca_lse.m.in  ca_mesh.m.in  ca_mesh2D.m.in  ca_meshSobol.m.in  ca_modelM.m.in  ca_modelW.m.in  ca_modelWM.m.in  ca_modelX.m.in  ca_modelXM.m.in  ca_reducedModel.m.in  ca_ridgeAnalysis.m.in  ca_ridgeAnalysisWithFocal.m.in  ca_serialiseEigen.m.in  ca_serialiseModel.m.in  ca_serialiseRidge.m.in  ca_serialiseStatP.m.in  ca_sndOrderModel.m.in  ca_sndOrderModel1.m.in  ca_statX.m.in  ca_w.m.in  gen3fact.m.in  scale_design.m.in
